Change pages folder location and change pages folder files paths

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </a>
           </article>
           <article class="middle-part-container__swim-article">
-            <a href="src/pages/article/article.html" target="_self">
+            <a href="pages/article/article.html" target="_self">
               <p class="swim-article__topic-paragraph"><img src="src/common/assets/icons/unicorn_icon.svg" alt="иконка единорог" aria-hidden="true">Self</p>
               <img src="src/common/assets/images/swimming_girl_back.png" alt="изображение вода девушка плавает купание расслабление" aria-hidden="true">
               <div class="swim-article__card-info-container_size-small">
